# okasaki

./: okasaki.cabal
src/Okasaki/: Prelude.hs
src/Okasaki/Data/: List.hs  Stack.hs
