name: okasaki
version: 0.1.0

build-type: Simple
cabal-version: >= 1.10


library
  hs-source-dirs:
      src
  exposed-modules:
      Okasaki.Data.List
      Okasaki.Data.Stack
      Okasaki.Prelude
  build-depends:
      base >= 4.9 && < 4.10
  default-extensions:
      NoImplicitPrelude
  default-language:
      Haskell2010
  ghc-options:
      -Wall
